--- a/kadai_014/style.css
+++ b/kadai_014/style.css
@@ -8,7 +8,7 @@ html {
 .google-fonts {
     font-family: 'Josefin Sans', sans-serif;
     font-size: 2rem;
-    letter-spacing: 2.4rem;
+    letter-spacing: 1.2em;
     text-shadow: 2px 2px 3px gray;
     border-bottom: solid 3px rgb(115, 115, 114)
 }
